--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "Aditya Giri",
   "license": "ISC",
   "dependencies": {
+    "csv-writer": "^1.6.0",
     "express": "^4.18.3"
   }
 }
