--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run dev\" \"npm run client\"",
-    "client": "cd client && npm start",
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "concurrently \"npm run dev-server\" \"npm run dev-client\"",
+    "dev-client": "cd client && npm start",
+    "dev-server": "nodemon index.js"
   },
   "author": "Aditya Giri",
   "license": "ISC",
