--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,7 @@ jobs:
   build:
 
     runs-on: self-hosted
+    timeout-minutes: 1
 
     strategy:
       matrix:
@@ -26,4 +27,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: bash ~/timetrack2/pullstart.sh
+    - run: npm install
