--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -12,19 +9,42 @@ on:
 jobs:
   build:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     timeout-minutes: 1
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 20.x
         cache: 'npm'
-    - run: npm install
+
+    - name: Reset to origin/master
+      run: git reset --hard origin/master
+
+    - name: Pull latest changes
+      run: git pull
+
+    - name: Change directory to client
+      run: cd client
+
+    - name: Install client dependencies
+      run: npm install
+
+    - name: Build client
+      run: npm run build
+
+    - name: Return to root directory
+      run: cd ..
+
+    - name: Install root dependencies
+      run: npm install
+
+    - name: Update port in index.js
+      run: sed -i 's/const port = [0-9]\+;/const port = 80;/' index.js
+
+    - name: Start application with pm2
+      run: sudo pm2 start npm -- start
