--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,13 +32,10 @@ jobs:
       run: npm install
 
     - name: Install client dependencies
-      run: cd ~/timetrack2/client;npm install
+      run: npm install --prefix ~/timetrack2/client
 
     - name: Build client
-      run: cd ~/timetrack2/client;npm run build
-
-    - name: cd to root
-      run: cd ~/timetrack2
+      run: npm run build-client
 
     - name: Update port in index.js
       run: sed -i 's/const port = [0-9]\+;/const port = 80;/' ~/timetrack2/index.js
