--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build-client": "cd client && npm run build",
     "dev": "concurrently \"npm run dev-server\" \"npm run dev-client\"",
     "dev-client": "cd client && npm start",
     "dev-server": "nodemon index.js"
