--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Add GitHub.com to known hosts
+      run: ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
