--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,22 @@
-name: Deploy to Server
+name: Deploy
 
 on:
   push:
-    branches:  [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - main  # Change to your deployment branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Add GitHub.com to known hosts
-      run: ssh-keyscan github.com >> ~/.ssh/known_hosts
-
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
+      uses: webfactory/ssh-agent@v0.7.0
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Copy files via SCP
-      run: scp -r -v -o StrictHostKeyChecking=no * ubuntu@35.154.205.209:/home/ubuntu/timetrack2/
-
     - name: Run deployment script
-      run: ssh ubuntu@35.154.205.209 'bash /home/ubuntu/timetrack2/pullstart.sh'
+      run: ssh -o StrictHostKeyChecking=no ubuntu@35.154.205.209 'bash /home/ubuntu/timetrack2/pullstart.sh'
