--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
-    "mongoose": "^8.2.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
