--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "passport": "^0.7.0",
