--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^8.2.4"
   },
   "devDependencies": {
