--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,15 +1,40 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Time Tensors",
+  "name": "Time Tensors",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "/icons/icon48",
+      "sizes": "48x48",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/icons/icon72",
+      "sizes": "72x72",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/icons/icon96",
+      "sizes": "96x96",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/icons/icon144",
+      "sizes": "144x144",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/icons/icon192",
+      "sizes": "192x192",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/icons/icon512",
+      "sizes": "512x512",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#2b7df8",
   "background_color": "#ffffff"
 }
