chore: black icons

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -35,6 +35,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#2b7df8",
+  "theme_color": "#000000",
   "background_color": "#000000"
 }
