--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "build-client": "cd client && npm run build",
-    "dev": "concurrently \"npm run dev-server\" \"npm run dev-client\"",
+    "dev": "concurrently \"sudo systemctl start mongod\" \"npm run dev-server\" \"npm run dev-client\"",
     "dev-client": "cd client && npm start",
     "dev-server": "nodemon index.js"
   },
@@ -18,9 +18,11 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^140.0.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
